--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = ["openai", "nltk"]
 
 [dependency-groups]
 dev = [
+    "pytest>=8.3.4",
+    "pytest-mock>=3.14.0",
     "ruff>=0.9.4",
 ]
