--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = ["openai", "nltk"]
 
 [dependency-groups]
 dev = [
+    "jupyterlab>=4.3.5",
+    "matplotlib>=3.10.0",
+    "pandas>=2.2.3",
     "pytest>=8.3.4",
     "pytest-mock>=3.14.0",
     "ruff>=0.9.4",
